--- a/warrior_sample/package.xml
+++ b/warrior_sample/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>warrior_monroy</name>
+  <name>warrior_sample</name>
   <version>0.0.0</version>
   <description>Monroy's implementation of a warrior in rosgame</description>
   <maintainer email="jgmonroy@uma.es">orestes</maintainer>
